--- a/Jesus_Ruiz_Rodriguez_PRACTICA09EVA02/Jesus_Ruiz_Rodriguez_PRACTICA09EVA02.html
+++ b/Jesus_Ruiz_Rodriguez_PRACTICA09EVA02/Jesus_Ruiz_Rodriguez_PRACTICA09EVA02.html
@@ -4,13 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Ejercicio 9</title>
 </head>
 <body>
-    <p id="parrafo"></p>
-    <p></p>
+    <section id="s1">
+        <h1>Título</h1>
+        <p>Ejemplo de documento <strong>DOM</strong> Visión en arbol</p>
+    </section>
+    <section id="s2">
+        <p>Aquí sólo hay texto</p>
+    </section> 
+    
+
     <script>
-        let p = document.getElementById("parrafo");
         
     </script>
 </body>
